feat 4단계 - 중복 자동차 명 예외 처리 추가